--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,8 @@
-@import './components/logo.scss';
+@import './settings.scss';
 @import './components/header.scss';
+@import './components/logo.scss';
 @import './components/menu.scss';
+@import './components/banner.scss';
+
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-	font-family: 'Montserrat', sans-serif;
-}
-
-
