--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,29 +1,43 @@
-.card {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	margin-top: 20px;
+.card-container {
 	
-	img {
+	
+	.card {
+		margin-top: 20px;
+		position: relative;
 		height: 255px;
-		object-fit: cover;
-		border-radius: 10px;
-	}
-	
-	figcaption {
-		border-radius: 10px;
-		position: absolute;
 		display: flex;
-		align-items: flex-end;
-		width: 100%;
-		height: 100%;
-		bottom: 0px;
-		padding: 0 19px 15px 19px;
-		// padding-left: 20px;
-		// padding-bottom: 15px;
-		font-size: 18px;
-		font-weight: bold;
-		color: white;
-		background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5));
+		flex-direction: column;
+		
+		img {
+			height: 100%;
+			object-fit: cover;
+			border-radius: 10px;
+		}
+		
+		figcaption {
+			border-radius: 10px;
+			position: absolute;
+			display: flex;
+			align-items: flex-end;
+			width: 100%;
+			height: 100%;
+			bottom: 0px;
+			padding: 0 19px 15px 19px;
+			// padding-left: 20px;
+			// padding-bottom: 15px;
+			font-size: 18px;
+			font-weight: bold;
+			color: white;
+			background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5));
+		}
+	}
+}
+
+@media (min-width: $breakpoint-mobile) {
+	.card {
+		flex-direction: row;
+		width: 340px;
+		height: 340px;
+
 	}
 }
