--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import './components/menu.scss';
 @import './components/banner.scss';
 @import './components/card.scss';
+@import './components/gallery.scss';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
