footer mobile + desktop ok = Home ok

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -11,6 +11,9 @@ $banner-url-desktop: "/src/assets/image_source_1_1240.webp";
 
 body {
 	font-family: 'Montserrat', sans-serif;
+}
+
+header, main {
 	width: 90%;
 	margin: 0 auto;
 }
