--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,8 @@
 @import './components/banner.scss';
 @import './components/card.scss';
 @import './components/gallery.scss';
+@import './components/footer.scss';
+@import './components/logofooter.scss';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
