--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -7,7 +7,7 @@
 	background-position: center;
 	margin: 27px auto 22px auto;
 	
-	p {
+	h2 {
 		background-color: rgba(0, 0, 0, 0.6);
 		display: flex;
 		align-items: center;
@@ -26,10 +26,17 @@
 		background-image: url($banner-url-desktop);
 		margin-top: 50px;
 		margin-bottom: 43px;
-		p {
+		h2 {
 			justify-content: center;
 			font-size: 48px;
 			padding: 0 16px;
+			text-shadow: 
+				0px 4px 4px rgba(0, 0, 0, 0.25),
+				1px 1px 0 #000,
+				-1px 1px 0 #000,
+				-1px -1px 0 #000,
+				1px -1px 0 #000,
+			;
 		}
 	}
 
