carousel mobile ok but arrows

--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -5,7 +5,7 @@
 	background-image: url($banner-url-mobile);
 	background-size: 150%;
 	background-position: center;
-	margin: 27px auto 22px auto;
+	margin: 0 auto 22px auto;
 	
 	h2 {
 		background-color: rgba(0, 0, 0, 0.6);
