--- a/src/styles/components/logo.scss
+++ b/src/styles/components/logo.scss
@@ -1,5 +1,10 @@
-.logo img {
-	width: 145px;
+
+.logo {
+	height: 46.72px;
+
+	img {
+		width: 145px;
+	}
 }
 
 @media (min-width: $breakpoint-mobile) {
