--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin: 20px auto 0 auto;
+	margin: 20px auto 27px auto;
 }
 
 @media (min-width: $breakpoint-mobile) {
