--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import './components/gallery.scss';
 @import './components/footer.scss';
 @import './components/logofooter.scss';
+@import './components/carousel.scss';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
