--- a/src/styles/components/logo.scss
+++ b/src/styles/components/logo.scss
@@ -8,7 +8,11 @@
 }
 
 @media (min-width: $breakpoint-mobile) {
-	.logo img {
-		width: 210px;
+	.logo {
+		height: 68px;
+		
+		img {
+			width: 210px;
+		}
 	}
 }
