--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 @import './components/logofooter.scss';
 @import './components/carousel.scss';
 @import './components/details.scss';
+@import './components/rating.scss';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
