--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 @import './components/carousel.scss';
 @import './components/details.scss';
 @import './components/rating.scss';
+@import './components/collapse.scss';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
