--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -1,5 +1,6 @@
 .collapse {
 	position: relative;
+	overflow: hidden;
 
 	.arrow-up {
 		cursor: pointer;
@@ -43,22 +44,26 @@
 	padding-left: 10px;
 	display: flex;
 	align-items: center;
-	
 }
-
+.description-container {
+	overflow: hidden;
+	height: 100%;
+}
 .description-collapse {
 	margin: 13px 20px 20px 20px;
 	font-size: 12px;
 	font-weight: 400;
-	// animation: reveal 0.5s linear;
-	// @keyframes reveal {
-	// 	0% {
-	// 		height: 0%;
-	// 	}	
-	// 	100% {
-	// 		height: 100%;
-	// 	}
-	// }
+	position: relative;
+	overflow: hidden;
+	animation: reveal 0.3s linear;
+	@keyframes reveal {
+		0% {
+			bottom: 90%;
+		}	
+		100% {
+			bottom: 0%;
+		}
+	}
 
 	li {
 		font-weight: 400;
