page error 404 ok

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @import './components/details.scss';
 @import './components/rating.scss';
 @import './components/collapse.scss';
+@import './pages/error404.scss';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
