--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -24,6 +24,7 @@
 		max-width: 1240px;
 		height: 223px;
 		background-image: url($banner-url-desktop);
+		background-size: cover;
 		margin-top: 50px;
 		margin-bottom: 43px;
 		h2 {
