--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,8 @@
 @import './components/rating.scss';
 @import './components/collapse.scss';
 @import './pages/error404.scss';
+@import './pages/apropos.scss';
+
 
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
