--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -7,12 +7,10 @@
 	
 	.card {
 		position: relative;
-		height: 100%;
-		width: 100%;
+		@include hw100;
 		
 		img {
-			height: 100%;
-			width: 100%;
+			@include hw100;
 			object-fit: cover;
 		}
 		
@@ -20,12 +18,9 @@
 			position: absolute;
 			display: flex;
 			align-items: flex-end;
-			width: 100%;
-			height: 100%;
+			@include hw100;
 			bottom: 0px;
 			padding: 0 19px 15px 19px;
-			// padding-left: 20px;
-			// padding-bottom: 15px;
 			font-size: 18px;
 			font-weight: bold;
 			color: white;
