--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -1,21 +1,29 @@
 .banner {
+	position: relative;
 	border-radius: 10px;
 	height: 111px;
 	overflow: hidden;
-	background-image: url($banner-url-mobile);
-	background-size: 150%;
-	background-position: center;
+	// background-image: url($banner-url-mobile);
+	// background-size: 150%;
+	// background-position: center;
 	margin: 0 auto 22px auto;
+
+	img {
+		@include hw100;
+		object-fit: cover;
+	}
 	
 	h2 {
-		background-color: rgba(0, 0, 0, 0.6);
+		position: absolute;
+		top: 0;
+		// background-color: rgba(0, 0, 0, 0.6);
 		display: flex;
 		align-items: center;
 		font-size: 24px;
 		font-weight: bold;
 		color: white;
 		padding: 0 90px 0 16px;
-		height: 100%;
+		@include hw100;
 	}
 }
 
@@ -23,8 +31,8 @@
 	.banner {
 		max-width: 1240px;
 		height: 223px;
-		background-image: url($banner-url-desktop);
-		background-size: cover;
+		// background-image: url($banner-url-desktop);
+		// background-size: cover;
 		margin-top: 50px;
 		margin-bottom: 43px;
 		h2 {
