--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -1,21 +1,20 @@
-.slide-hidden {
-	display: none;
-}
-
 .carousel {
 	position: relative;
 	height: 255px;
+	width: 100%;
 	border-radius: 10px;
 	overflow: hidden;
-	display: flex;
-
+	
 	.slide {
+		display: flex;
 		@include hw100;
+		transition: ease-out 0.3s;
+		
 	}
-
 	
 	img {
 		@include hw100;
+		min-width: 100%;
 		object-fit: cover;
 	}
 }
@@ -26,6 +25,7 @@
 	transform: translateY(-50%);
 	height: 20px;
 	cursor: pointer;
+	z-index: 100;
 }
 
 .prev {
@@ -48,6 +48,7 @@
 	bottom: 25px;
 	font-size: 18px;
 	color: white;
+	z-index: 100;
 }
 
 @media (min-width: $breakpoint-mobile) {
