component for tags

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,5 +11,6 @@
 @import './components/collapse.scss';
 @import './pages/error404.scss';
 @import './pages/apropos.scss';
+@import './components/tags.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
