--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -3,9 +3,6 @@
 	border-radius: 10px;
 	height: 111px;
 	overflow: hidden;
-	// background-image: url($banner-url-mobile);
-	// background-size: 150%;
-	// background-position: center;
 	margin: 0 auto 22px auto;
 
 	img {
@@ -29,12 +26,12 @@
 
 @media (min-width: $breakpoint-mobile) {
 	.banner {
+		border-radius: 25px;
 		max-width: 1240px;
 		height: 223px;
-		// background-image: url($banner-url-desktop);
-		// background-size: cover;
 		margin-top: 50px;
 		margin-bottom: 43px;
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 		h2 {
 			justify-content: center;
 			font-size: 48px;
