component name in english please + collapse size in about

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,5 +1,6 @@
 $color-primary: #FF6060;
-$color-secondary: #e3e3e3;
+$color-secondary: #F6F6F6;
+$color-tertiary: #e3e3e3;
 $breakpoint-mobile: 650px;
 $banner-url-mobile: "/assets/image_source_1_512.webp";
 $banner-url-desktop: "/assets/image_source_1_1240.webp";
@@ -29,7 +30,7 @@ $banner2-url-desktop: "/assets/image_source_2_1240.webp";
 
 @mixin star-empty {
 	clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-	background-color: $color-secondary;
+	background-color: $color-tertiary;
 }
 
 * {
