--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
 @import './components/rating.scss';
 @import './components/collapse.scss';
 @import './pages/error404.scss';
-@import './pages/apropos.scss';
+@import './pages/about.scss';
 @import './components/tags.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
