--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -12,7 +12,7 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		gap: 50px;
-		background-color: #f6f6f6;
+		background-color: $color-secondary;
 		border-radius: 25px;
 		padding: 56px 50px;
 	}
