--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -1,8 +1,7 @@
 .collapse {
 	position: relative;
 	overflow: hidden;
-	// background-color: rgba(246, 246, 246, 0.45);
-	background-color: red;
+	background-color: rgba(246, 246, 246, 0.45);
 	border-radius: 5px;
 
 	.arrow-up {
@@ -50,7 +49,7 @@
 }
 .description-container {
 	overflow: hidden;
-	animation: heighty 0.7s linear;
+	animation: heighty 0.6s linear;
 	height: fit-content;
 	@keyframes heighty {
 		0% {
