--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -17,6 +17,7 @@
 
 .logo-footer img{
 	width: 122px;
+	// Changing logo's color into white
 	filter: brightness(0) invert(100%);
 	-webkit-filter: brightness(0) invert(100%);
 }
