waiting message for HousingCard

--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -11,6 +11,7 @@
 		max-width: 1240px;
 		flex-direction: row;
 		flex-wrap: wrap;
+		justify-content: space-around;
 		gap: 50px;
 		background-color: $color-secondary;
 		border-radius: 25px;
