--- a/src/styles/components/details.scss
+++ b/src/styles/components/details.scss
@@ -2,10 +2,12 @@
 	display: flex;
 	flex-direction: column;
 	margin-top: 15px;
+	gap: 10px;
 
 	.details-title {
 		display: flex;
 		flex-direction: column;
+		gap: 7px;
 
 		.title {
 			color: $color-primary;
@@ -14,7 +16,6 @@
 
 		.location {
 			font-size: 14px;
-			margin-top: 5px;
 		}
 	}
 }
@@ -24,7 +25,6 @@
 	flex-direction: row-reverse;
 	justify-content: space-between;
 	align-items: center;
-	margin-top: 16px;
 
 	.host {
 		display: flex;
