--- a/src/styles/components/tags.scss
+++ b/src/styles/components/tags.scss
@@ -1,14 +1,14 @@
 .tags {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: center;
 	gap: 10px;
-	margin-top: 10px;
-	height: 18px;
+	height: auto;
 
 	.tag {
 		@include flex-center;
-		height: 100%;
+		height: 18px;
 		font-size: 10px;
 		font-weight: bold;
 		background-color: $color-primary;
@@ -23,12 +23,12 @@
 @media (min-width: $breakpoint-mobile) {
 	.tags {
 		margin-top: 18px;
-		height: 26px;
 		gap: 10px;
 
 		.tag {
 			font-size: 14px;
 			min-width: 115px;
+			height: 25px;
 		}
 	}
 }
